[package]
name = "spwn-lsp"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spwn = { git = "https://github.com/Spu7Nix/SPWN-language.git", rev = "466d63e5d7092e6b7db861673869c5d3282bf62d" }
